--- a/circle.yml
+++ b/circle.yml
@@ -2,6 +2,8 @@ dependencies:
   cache_directories:
     - ~/.pyenv/versions/3.4.3
     - ~/.pyenv/versions/3.5.1
+  pre:
+    - sed -i '/source \/home\/ubuntu\/virtualenvs\//d' ~/.circlerc
   override:
     - bash .ci/deps.sh
 
@@ -9,5 +11,5 @@ test:
   override:
     - bash .ci/tests.sh:
         parallel: true
-    - python3 setup.py install:
+    - python setup.py install:
         parallel: true
